# Olive-Turtle-Server

./: .gitignore  Olive-Turtle-Server.code-workspace  docker-compose.json  docker-compose.yml
docker/: docker-compose.yml
docker/telegraf/: telegraf.conf
telegram_bot/: bot_flowchart.md  pyproject.toml
telegram_bot/telegram_bot/: configuration.py  conversationbot.py  conversationbot2.py  main.py  nestedconversationbot.md  nestedconversationbot.py
telegram_bot/telegram_bot/modules/: permissions.py
